Footer: fix spacing around social icons

--- a/src/views/footer.scss
+++ b/src/views/footer.scss
@@ -64,6 +64,15 @@ footer {
       text-align: center;
       display: block;
     }
+
+    &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      height: -moz-available;
+      height: -webkit-fill-available;
+      height: fill-available;
+    }
   }
 
   .copyright-notice {
